--- a/beetsplug/web/styles/styles.css
+++ b/beetsplug/web/styles/styles.css
@@ -2,6 +2,30 @@ body {
   margin: 0;
 }
 
+.controller-button {
+  width: 35px;
+}
+
+.collection .collection-item.avatar .square {
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    left: 15px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.collection .collection-item.avatar .description {
+    margin-right:100px;
+}
+
+#dropdown1 
+{
+    border:0px;
+    outline:0px;
+}
+
 .splash {
   text-align: center;
   margin: 10% 0 0 0;
@@ -21,18 +45,6 @@ body {
   display: inline-block;
   font-size: 72px;
   margin-top: 50px;
-}
-
-@media print {
-  .page-host {
-    position: absolute;
-    left: 10px;
-    right: 0;
-    top: 50px;
-    bottom: 0;
-    overflow-y: inherit;
-    overflow-x: inherit;
-  }
 }
 
 section {
