--- a/beetsplug/web/styles/styles.css
+++ b/beetsplug/web/styles/styles.css
@@ -24,11 +24,11 @@ body {
     margin-right:100px;
 }
 
-#dropdown1 
+/*#dropdown1 
 {
     border:0px;
     outline:0px;
-}
+}*/
 
 .splash {
   text-align: center;
